src/sass/components/_main.scss
/**
 * MAIN
 */
// mixin
@import "../mixins/scrollbar";
// base
body {
  // scrollbar
  @include scrollbar;
  
  // layout - default
  .app {
    display: flex;
    .main {
      padding: $main-padding;
      flex: 1 1 auto;
      z-index: 5;
    }
  }

  // layout - sidebar fixed
  &.sidebar-fixed {
    .app {
      .main {
        margin-left: $sidebar-wrapper-width;
        padding: $main-padding;
      }
    }
  }

  // layout - navbar fixed
  &.navbar-fixed {
    .app {
      .main {
        margin-top: $main-navbar-wrapper-height;
        padding: $main-padding;
      }
    }
  }
}

// responsive
@include media-breakpoint-down(md) {
  body {
    .app {
      .main {
        padding: 1rem 1rem !important;
      }
    }
  }
}
@include media-breakpoint-down(md) {
  body {
    &.sidebar-fixed {
      .app {
        .main {
          margin-left: 0;
        }
      }
    }
  }
}

